--- a/style.css
+++ b/style.css
@@ -6,24 +6,26 @@
 }
 
 body{
-    position: relative;
+    
     min-height: 100vh;
+    display: flex;
     justify-content:center;
     align-items: center;
-    display: flex;
     background-color: hsl(11, 91%, 87%);
     font-family: "Roboto", "Helvetica Neue", Helvetica, Arial;
+
 
 }
 
 .attribution{
-    position: absolute;
+    position: fixed;
     bottom:0;
+    
 }
 .container {
     min-width: 350px;
     width: 80%; /* Utilisation de 80% de la largeur de l'écran */
-    max-width: 400px; /* Ajout d'une limite de largeur maximale */
+    max-width: 350px; /* Ajout d'une limite de largeur maximale */
     display: flex;
     flex-direction: column;
     row-gap: 15px;
@@ -96,7 +98,7 @@ body{
     column-gap: 16px;
     justify-content: center;
     align-items: center;
-    padding: 10px 0;
+    padding: 20px 0;
     border-bottom: 2px solid rgb(85, 85, 85);
     margin-bottom: 10px;
     width: 100%;
@@ -117,6 +119,7 @@ body{
     border-radius: 4px;
     position: absolute;
     bottom: -20px;
+    margin-bottom: 3px;
 }
 .day{
     width: 100%;
@@ -160,22 +163,30 @@ body{
     color: hsl(28, 10%, 53%);
 
 }
-
-@media screen and (max-width:376px){
-    .chart{
-        display: flex;
-        column-gap: 16px;
-        justify-content: center;
-        align-items: center;
-        padding: 10px 0;
-        border-bottom: 2px solid rgb(85, 85, 85);
-        margin-bottom: 20px;
-        width: 100%;
-        height: 10vmin;
-    }
-}
+.tooltip {
+    position: absolute;
+    bottom: 108%;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: black;
+    color: white;
+    padding: 5px;
+    border-radius: 5px;
+    visibility: hidden;
+    opacity: 0;
+   
+  }
+  
+  .bar:hover .tooltip {
+    visibility: visible;
+    opacity: 1;
+  }
+  
 
 @media screen and (max-width:415px){
+    
+   
+   
     .chart{
         display: flex;
         column-gap: 16px;
@@ -188,17 +199,24 @@ body{
         height: 20vmin;
     }
 }
-
-@media screen and (min-width:281px){
+@media screen and (max-width:376px){
+    
+    body{
+     width: 107vw;
+    }
+   
     .chart{
         display: flex;
         column-gap: 16px;
         justify-content: center;
         align-items: center;
-        padding: 10px 0;
+        padding: 30px 0;
         border-bottom: 2px solid rgb(85, 85, 85);
         margin-bottom: 20px;
         width: 100%;
-        height: 15vmin;
+        height: 20vmin;
+    }
+    .bar{
+        margin-bottom: 2px;
     }
 }
