--- a/style.css
+++ b/style.css
@@ -142,6 +142,7 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
+
     font-family: "Roboto", sans-serif;
 }
 
@@ -174,6 +175,7 @@ body{
     border-radius: 5px;
     visibility: hidden;
     opacity: 0;
+    font-weight:700;
    
   }
   
@@ -185,8 +187,6 @@ body{
 
 @media screen and (max-width:415px){
     
-   
-   
     .chart{
         display: flex;
         column-gap: 16px;
@@ -202,7 +202,28 @@ body{
 @media screen and (max-width:376px){
     
     body{
-     width: 107vw;
+     width: 109vw;
+    }
+   
+    .chart{
+        display: flex;
+        column-gap: 16px;
+        justify-content: center;
+        align-items: center;
+        padding: 30px 0;
+        border-bottom: 2px solid rgb(85, 85, 85);
+        margin-bottom: 20px;
+        width: 100%;
+        height: 20vmin;
+    }
+    .bar{
+        margin-bottom: 2px;
+    }
+}
+@media screen and (max-width:354px){
+    
+    body{
+     width: 108vw;
     }
    
     .chart{
